Fixes table wrapping on date in events listing

--- a/src/onegov/fsi/theme/styles/fsi.scss
+++ b/src/onegov/fsi/theme/styles/fsi.scss
@@ -69,6 +69,11 @@ dd.accordion-navigation + dd.accordion-navigation {
 /*
     Tables
 */
+
+.no-wrap {
+    white-space: nowrap;
+}
+
 .events-table {
     border: 1px solid $gray-light;
     border-width: 1px 1px 0;
